# win-glide

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: overview.md
src/: admin.rs  app.rs  autostart.rs  bootstrap.rs  cli.rs  config.rs  hotkey.rs  indicator.rs  main.rs  settings_ui.rs  switcher.rs  taskbar.rs  temp.rs  tray_icon.rs  types.rs  uia_events.rs  updater.rs  utils.rs  winevent.rs
src/event/: mod.rs  uia.rs  winevent.rs
src/logging/: console.rs  formatter.rs  logging.rs  mod.rs
src/setting/: hotkey_button.rs  mod.rs  setting_item.rs  ui.rs
src/taskbar/: activate.rs  button_window.rs  enumerator.rs  explorer.rs  mod.rs  uncombine.rs  window.rs  window_context.rs
src/virtual_desktop/: indicator.rs
src/win32/: activate.rs  aumid.rs  explorer.rs  mod.rs  window.rs  window_context.rs
wix/: main.wxs
