[package]
name = "taskbar_switcher"
version = "0.1.0"
edition = "2021"
exclude = ["docs/"]

[dependencies]
anyhow = "1"
ctrlc = "3.5.2"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
]
