[package]
name = "taskbar_switcher"
version = "0.1.0"
edition = "2021"
exclude = ["docs/"]

[dependencies]
anyhow = "1"
ctrlc = "3.5.2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber =  { version = "0.3", features = ["fmt", "json"] }
nu-ansi-term = "0.50"
tracing-forest = { version = "0.3.1", features = ["smallvec", "ansi"] }
windows-core = "0.61"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Storage_EnhancedStorage",
]

