[package]
name = "winglide"
version = "0.0.5"
authors = ["congchuahiep"]
description = "A simple tool to improve Windows 11 navigation smoother: cycle taskbar buttons, uncombine taskbar buttons, jump to desktop,..."
license = "MIT"
repository = "https://github.com/congchuahiep/WinGlide"
edition = "2021"
exclude = ["docs/"]

[[bin]]
name = "WinGlide"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber =  { version = "0.3", features = ["fmt", "json"] }
nu-ansi-term = "0.50"
tracing-forest = { version = "0.3.1", features = ["smallvec", "ansi"] }
windows-core = "0.61"
windows-reactor = { git = "https://github.com/microsoft/windows-rs", branch = "master" }
aquamarine = "0.6.0"
winvd = "0.0.49"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dirs = "6.0.0"
once_cell = "1.21.4"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Variant",
    "Win32_System_LibraryLoader",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Security",
    "Win32_Storage_EnhancedStorage",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_JobObjects",
]

[build-dependencies]
windows-reactor-setup = { git = "https://github.com/microsoft/windows-rs", branch = "master" }
